unpackaged/main/default/objects/ContactToUserFieldMapping__c/ContactToUserFieldMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Contact To User Field Mapping</label>
</CustomObject>