unpackaged/main/default/objects/ContactToUserFieldMapping__c/fields/ContactField__c.field-meta.xml
<CustomField>
    <fullName>ContactField__c</fullName>
    <label>ContactField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>