unpackaged/main/default/objects/ContactToUserFieldMapping__c/fields/Is_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Formula_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes : If it is a formula field 
Give values for dependent field to check, in dependent field 
If dependent field is blank then irrespective of field changed or not values will be updates</description>
    <inlineHelpText>Yes : If it is a formula field 
Provide dependent field to check old map
If dependent field is blank then irrespective of field changed or not values will be updated</inlineHelpText>
    <label>Is Formula Field</label>
    <type>Checkbox</type>
</CustomField>