unpackaged/main/default/objects/ContactToUserFieldMapping__c/fields/UserField__c.field-meta.xml
<CustomField>
    <fullName>UserField__c</fullName>
    <label>UserField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>